--- a/3/dev.ipynb
+++ b/3/dev.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "7581"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
     "    compartment_1 = rucksack[:n_items // 2]\n",
     "    compartment_2 = rucksack[n_items // 2:]\n",
     "\n",
-    "    for i, letter in enumerate(a_zA_Z):\n",
+    "    for letter in a_zA_Z:\n",
     "        if letter in compartment_1 and letter in compartment_2:\n",
     "            sum_of_priorities += a_zA_Z.index(letter) + 1\n",
     "\n",
