--- a/3/dev.ipynb
+++ b/3/dev.ipynb
@@ -95,6 +95,36 @@
    "source": [
     "--- Part Two ---"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2525"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_of_priorities = 0\n",
+    "\n",
+    "# Iterate over groups of 3 rucksacks\n",
+    "for rucksack_1, rucksack_2, rucksack_3 in zip(*[iter(raw_input.splitlines())] * 3):\n",
+    "    \n",
+    "    # Check if a letter is in all 3 rucksacks\n",
+    "    for letter in a_zA_Z:\n",
+    "        if letter in rucksack_1 and letter in rucksack_2 and letter in rucksack_3:\n",
+    "            sum_of_priorities += a_zA_Z.index(letter) + 1\n",
+    "\n",
+    "sum_of_priorities"
+   ]
   }
  ],
  "metadata": {
