😱 day 7 kind of solved

--- a/7/dev.ipynb
+++ b/7/dev.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,161 +34,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import make_dir_tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1084134"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_size = 100_000\n",
+    "\n",
+    "dir_tree = make_dir_tree(raw_input)\n",
+    "sum(filter(lambda x: x <= max_size, dir_tree.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "example_input = \"\"\"$ cd /\n",
-    "$ ls\n",
-    "dir a\n",
-    "14848514 b.txt\n",
-    "8504156 c.dat\n",
-    "dir d\n",
-    "$ cd a\n",
-    "$ ls\n",
-    "dir e\n",
-    "29116 f\n",
-    "2557 g\n",
-    "62596 h.lst\n",
-    "$ cd e\n",
-    "$ ls\n",
-    "584 i\n",
-    "$ cd ..\n",
-    "$ cd ..\n",
-    "$ cd d\n",
-    "$ ls\n",
-    "4060174 j\n",
-    "8033020 d.log\n",
-    "5626152 d.ext\n",
-    "7214296 k\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 /\n",
-      "6 /a\n",
-      "12 /a/e\n",
-      "15 /a\n",
-      "16 /\n",
-      "17 /d\n"
-     ]
+     "data": {
+      "text/plain": [
+       "6183184"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pwd = \"\"\n",
+    "space_total = 70000000\n",
+    "space_required = 30000000\n",
     "\n",
-    "for i,line in enumerate(example_input.splitlines()):\n",
-    "    # print(line)\n",
-    "\n",
-    "    # Distinguish between commands and output\n",
-    "    \n",
-    "    # Commands start with $\n",
-    "    if line.startswith(\"$\"):\n",
-    "\n",
-    "        # Distinguish between cd and ls \n",
-    "        # cd changes the pwd\n",
-    "        if line.split(\" \")[1] == \"cd\":\n",
-    "            if line.split(\" \")[2] == \"/\":\n",
-    "                pwd = \"/\"\n",
-    "            elif line.split(\" \")[2].isalnum():\n",
-    "                if pwd == \"/\":\n",
-    "                    pwd = pwd + line.split(\" \")[2]\n",
-    "                else:\n",
-    "                    pwd = pwd + \"/\" +line.split(\" \")[2]\n",
-    "            elif line.split(\" \")[2] == \"..\":\n",
-    "                pwd = \"/\".join(pwd.split(\"/\")[:-1])\n",
-    "                if pwd == \"\":\n",
-    "                    pwd = \"/\"\n",
-    "\n",
-    "            print(i, pwd)\n",
-    "        # ls lists the contents of the pwd\n",
-    "        elif line.split(\" \")[1] == \"ls\":\n",
-    "            ...\n",
-    "    \n",
-    "    # Output doesn't start with $\n",
-    "    else:\n",
-    "        ...\n"
+    "space_to_delete = space_required - (space_total - dir_tree[\"/\"])  # required space - free space\n",
+    "space_to_delete + min(filter(lambda x: x >= 0, map(lambda dir_size: dir_size - space_to_delete, dir_tree.values())))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pwd = \"\"\n",
-    "def get_pwd(line, pwd):\n",
-    "    if line.startswith(\"$\"):\n",
-    "        if line.split(\" \")[1] == \"cd\":\n",
-    "            if line.split(\" \")[2] == \"/\":\n",
-    "                pwd = \"/\"\n",
-    "            elif line.split(\" \")[2].isalnum():\n",
-    "                if pwd == \"/\":\n",
-    "                    pwd = pwd + line.split(\" \")[2]\n",
-    "                else:\n",
-    "                    pwd = pwd + \"/\" +line.split(\" \")[2]\n",
-    "            elif line.split(\" \")[2] == \"..\":\n",
-    "                pwd = \"/\".join(pwd.split(\"/\")[:-1])\n",
-    "                if pwd == \"\":\n",
-    "                    pwd = \"/\"\n",
-    "    return pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 /\n",
-      "1 /\n",
-      "2 /\n",
-      "3 /\n",
-      "4 /\n",
-      "5 /\n",
-      "6 /a\n",
-      "7 /a\n",
-      "8 /a\n",
-      "9 /a\n",
-      "10 /a\n",
-      "11 /a\n",
-      "12 /a/e\n",
-      "13 /a/e\n",
-      "14 /a/e\n",
-      "15 /a\n",
-      "16 /\n",
-      "17 /d\n",
-      "18 /d\n",
-      "19 /d\n",
-      "20 /d\n",
-      "21 /d\n",
-      "22 /d\n"
-     ]
-    }
-   ],
-   "source": [
-    "pwd = \"\"\n",
-    "for i,line in enumerate(example_input.splitlines()):\n",
-    "    pwd = get_pwd(line, pwd)\n",
-    "    print(i,pwd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
